    CL:BUILT-IN-CLASS, CL:STRUCTURE-CLASS and CL:STANDARD-CLASS name
    CLOS classes.
  * an interface to the MetaObject Protocol, as described in Kiczales,
    des Rivieres and Bobrow's "The Art of the Metaobject Protocol",
    MIT Press, 1991, is available from the SB-MOP package.
  * incompatible change: the SB-PCL package should now be considered a
    private implementation detail, and no longer a semi-private MOP
    interface.
  * known functions, which cannot be open coded by backend, are
    considered to be able to check types of their arguments.
    (reported by Nathan J. Froyd)
  * fixed a bug in computing method discriminating functions: it is
    now possible to define methods specialized on classes which have
    forward-referenced superclasses.  (thanks to Gerd Moellmann)
  * fixed evaluation order in optional entries.  (reported by Gilbert
    Baumann)
  * SB-MOP:ENSURE-CLASS-USING-CLASS now takes its arguments in the
    specified-by-AMOP order of (CLASS NAME &REST ARGS &KEY).
  * fixed some bugs revealed by Paul Dietz' test suite:
    ** COPY-ALIST now signals an error if its argument is a dotted
       list;

planned incompatible changes in 0.7.x:
  * (not done yet, but planned:) When the profiling interface settles
    down, maybe in 0.7.x, maybe later, it might impact TRACE. They both
    encapsulate functions, and it's not clear yet how e.g. UNPROFILE
    will interact with TRACE
    and UNTRACE. (This shouldn't matter, though, unless you are
    using profiling. If you never profile anything, TRACE should
    continue to behave as before.)
  * (not done yet, but planned:) Inlining can now be controlled the
    ANSI way, without MAYBE-INLINE, since the idiom
	(DECLAIM (INLINE FOO))
	(DEFUN FOO (..) ..)
	(DECLAIM (NOTINLINE FOO))
	(DEFUN BAR (..) (FOO ..))
	(DEFUN BLETCH (..) (DECLARE (INLINE FOO)) (FOO ..))
    now does what ANSI says it should. The CMU-CL-style 
    SB-EXT:MAYBE-INLINE declaration is now deprecated and ignored.